update css for chrome input box alignment bug

--- a/src/_tags.scss
+++ b/src/_tags.scss
@@ -70,7 +70,6 @@ form label{
     -webkit-box-sizing: border-box;
     width: 100%;
     padding: 0 10px; 
-    line-height: 34px;
     height: 34px;
     outline: none;
     
